# ai-dev-tools

./: README.md
02-endtoend/: .dockerignore  .gitignore  CONCURRENT_ARCHITECTURE.md  CONCURRENT_SETUP.md  CONCURRENT_SETUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_QUICK_START.md  DOCKER_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_SUMMARY.md  Dockerfile  FASTAPI_DEPLOYMENT_SUMMARY.md  FEATURES_CHECKLIST.md  GETTING_STARTED.md  (+12 more)
02-endtoend/backend/: .env.example  README.md  jest.config.js  package.json  pyproject.toml
02-endtoend/backend/app/core/: config.py  database.py  security.py
02-endtoend/backend/app/models/: __init__.py  models.py
02-endtoend/backend/app/routes/: __init__.py  auth.py  interviews.py  problems.py
02-endtoend/backend/app/schemas/: __init__.py  schemas.py
02-endtoend/backend/app/services/: __init__.py  code_executor.py  services.py
02-endtoend/backend/src/: server.js
02-endtoend/backend/src/config/: auth.js  config.js  database.js
02-endtoend/backend/src/controllers/: authController.js  interviewController.js  problemController.js
02-endtoend/backend/src/middleware/: index.js
02-endtoend/backend/src/models/: index.js
02-endtoend/backend/src/routes/: authRoutes.js  interviewRoutes.js  problemRoutes.js
02-endtoend/backend/src/services/: codeExecutor.js  index.js
02-endtoend/backend/src/websocket/: index.js
02-endtoend/backend/tests/: setup.js
02-endtoend/backend/tests/integration/: auth.test.js  interviews.test.js  problems.test.js
02-endtoend/backend/tests/unit/: auth.test.js  codeExecutor.test.js  models.test.js
(+30 files in other folders)
